--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "uuid": "^9.0.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
