--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
     "semantic-ui-css": "^2.5.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
+    "@types/react-calendar": "^3.5.3",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
