--- a/client/package.json
+++ b/client/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "date-fns": "^2.16.1",
+    "formik": "^2.2.9",
+    "history": "^5.3.0",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^9.0.8",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-calendar": "^3.5.3",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
