--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.10",
     "axios": "^1.1.2",
     "date-fns": "^2.16.1",
     "formik": "^2.2.9",
