--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^9.0.8",
     "semantic-ui-css": "^2.5.0",
@@ -34,6 +35,7 @@
     "@types/react-calendar": "^3.5.3",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.32.0",
